US18 : PMD configuration + PMD fix